[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vllm-bench"
version = "0.1.0"
description = "Throughput and latency benchmark for OpenAI-compatible LLM inference endpoints (vLLM, TGI, llama.cpp, Ollama)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Omar A.", email = "158858944+oabdrabo@users.noreply.github.com" }]
keywords = ["vllm", "llm", "inference", "benchmark", "tgi", "ollama", "mlops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/pyxis3-ai/vllm-bench"
Source = "https://github.com/pyxis3-ai/vllm-bench"

[project.scripts]
vllm-bench = "vllm_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_bench"]
